Bump java-cfenv.version from 2.1.2.RELEASE to 2.3.0 (#360)
* Bump java-cfenv.version from 2.1.2.RELEASE to 2.3.0

Bumps `java-cfenv.version` from 2.1.2.RELEASE to 2.3.0.

Updates `java-cfenv` from 2.1.2.RELEASE to 2.3.0
- [Release notes](https://github.com/pivotal-cf/java-cfenv/releases)
- [Commits](https://github.com/pivotal-cf/java-cfenv/compare/v2.1.2.RELEASE...v2.3.0)

Updates `java-cfenv-test-support` from 2.1.2.RELEASE to 2.3.0
- [Release notes](https://github.com/pivotal-cf/java-cfenv/releases)
- [Commits](https://github.com/pivotal-cf/java-cfenv/compare/v2.1.2.RELEASE...v2.3.0)

Signed-off-by: dependabot-preview[bot] <support@dependabot.com>

* fix jmockit usage

* revert change on parent pom.xml

* formatting

Co-authored-by: dependabot-preview[bot] <27856297+dependabot-preview[bot]@users.noreply.github.com>
Co-authored-by: Mike Eltsufin <meltsufin@google.com>