@@ -15,10 +15,10 @@
     <description>Spring Cloud GCP Cloud Foundry Module</description>
 
     <properties>
+        <jmockit.version>1.49</jmockit.version>
         <argLine /> <!-- Needs to be defined so code coverage on/off profile works. -->
     </properties>
     <dependencies>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
@@ -31,7 +31,11 @@
             <groupId>io.pivotal.cfenv</groupId>
             <artifactId>java-cfenv</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>${jmockit.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
@@ -50,9 +54,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <!-- CloudFoundry test utils depend on JMockit, which requires
-                     using the jdk.attach.allowAttachSelf property on JDK 11 -->
+                     using the javaagent  -->
                 <configuration>
-                    <argLine>@{argLine} -Djdk.attach.allowAttachSelf=true</argLine>
+                    <argLine>${argLine} -javaagent:"${settings.localRepository}"/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar</argLine>
                 </configuration>
             </plugin>
         </plugins>
